--- a/css/main.css
+++ b/css/main.css
@@ -20,3 +20,8 @@ body {
   margin-left: 5px;
   cursor: pointer;
 }
+
+.form-check-input:checked ~ label {
+    text-decoration: line-through;
+    opacity: 0.8;
+}
